--- a/style.css
+++ b/style.css
@@ -18,5 +18,44 @@
   padding: 20px 40px;
 }
 .margin-ca{
-  margin: 100px 0;
+  margin: 50px 0;
+}
+.cat1, .cat2, .cat3{
+  padding: 10px 30px;
+  color: white;
+  border-radius: 10px;
+}
+.cat1{
+background-image: linear-gradient(to right,#FF9C35 0%,#FFD019 100%);
+}
+.cat2{
+  background-image: linear-gradient(to right,#FF136F 0%,#FF589B 100%);
+}
+.cat3{
+  background-image: linear-gradient(to right,#4289FF 0%,#3F07F8 100%);
+}
+.categories img{
+  width: 100px;
+}
+.card{
+  border: none;
+  box-shadow: 5px 5px 10px lightgray;
+}
+.card-footer{
+  background-color: white;
+  border-top: none;
+}
+#subscribe{
+  height: 300px;
+}
+#subscribe h6{
+  color: gray;
+}
+
+/* .form-control{
+  display: inline;
+  width: 70%;
+}  */
+footer{
+  text-align: center;
 }
